--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,23 @@
+@import url('https://fonts.googleapis.com/css2? family= Josefin+Sans:wght@400;700 & display=swap');
 *{
   margin: 0;
   padding: 0;
+  font-family:'Josefin Sans', sans-serif;
 }
 
-.navegador{
-  background-color: #fcc0f3;
+/* NAVEGADOR */
+.navbar-nube{
+  background-color: #e1fce2;
   color: white;
 }
 
-/* Modal */
+.nav-link:hover{
+  background-color: #f79576;
+  border-radius: 10px;
+}
+
+
+/* MODAL*/
 .modal-container {
   
     display: flex;
@@ -24,7 +33,7 @@
     z-index: 100;
   } 
   
-  /* hacer visible el modal  */
+  /* HACER VISIBLE MODAL */
   .modal-active {
     opacity: 1;
     visibility: visible;
@@ -34,15 +43,25 @@
   .modal-cart{
     width: 50rem;
     height: 30rem;
-    background-color: #edb8fa;
+    background-color: #e1fce2;
   }
   
   #cartTitle{
       margin: 5px 0;
       padding:5px;
-      color: white;
+      color: #7dafa6;
       position: relative;
-      top: 10px; left: 360px
+      top: 10px; left: 360px;
+  }
+  .cart-total{
+    color: #f79576;
+    text-align: center;
+  }
+
+  #total-carrito{
+    color: #f79576;
+    display: flex;
+    justify-content: center;
   }
   
   #close{
@@ -53,7 +72,7 @@
   
   .productInCart {
     color:white;
-    background-color: #fcc0f3;
+    background-color: #f79576;
     border-bottom-left-radius: 3px;
     border-top-left-radius: 3px;
     margin: 10px 0;
@@ -62,16 +81,116 @@
     justify-content: space-between;
   }
   
-  
+   /* ESTILOS INDEX */
+
   .card {
       margin:15px;
-      padding:0,5px
+      padding:0,5px;
+      color: #7dafa6;
   }
   
   #product-container {
-      display: grid;
+    display: flex;
       margin: 90px auto;
-      display: flex;
       justify-content: space-evenly;
       flex-wrap: wrap;
   } 
+
+  /* ESTILOS SOBRE MI */
+  .main-sobremi{
+    margin: 10px;
+    padding: 50px;
+    background-color: #e1fce2;
+  }
+
+  .h1-sobremi{
+    color: #f79576;
+    text-align: center;
+  }
+
+  .p-sobremi{
+    color: #f79576;
+    text-align: center;
+  }
+
+  /* ESTILOS LA GENTE DICE */
+  #opiniones{
+    font-size: 30px;
+    text-align: center;
+    color: #7dafa6;
+
+  }
+  .card-opinion{
+    color: #f79576;
+    font-size: 20px;
+    justify-content: center;
+    box-shadow: 5px 5px #f79576;
+  }
+
+  .card h2{
+    font-size: 20px;
+  }
+
+  .main-lagentedice{
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+    background-color: #e1fce2;
+  }
+
+  /* FOOTER */
+  .footer{
+    width: 100%;
+    background-color: #e1fce2;
+  }
+
+  .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 45px 0px;
+  }
+
+  .box figure{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  img{
+    width: 100px;
+  }
+
+  .sobreMi{
+    color: #7dafa6;
+    margin-bottom: 25px;
+    font-size: 20px;
+  }
+
+  .sobreMi2{
+    color: #7dafa6;
+    margin-bottom: 10px;
+  }
+
+  .redSocial a{
+    display: inline-block;
+    text-decoration: none;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    color: #7dafa6;
+    background-color: white;
+    text-align: center;
+  }
+
+  .grupo-2{
+    background-color: #a2edce;
+    padding: 15px 10px;
+    text-align: center;
+    color: #7dafa6;
+    font-size: 15px;
+  }
